--- a/zDeliccio/Wine.html
+++ b/zDeliccio/Wine.html
@@ -95,18 +95,28 @@
 		<article id="content2">
 			<section>
 				<div class="wrapper">
-					<div class="col-1-3">
-						<h2 style="padding-left: 10px;">Alcohol Delivery</h2>
-						<div class="wrap-col mag-2">
-						<div class="wrapper pad_bot1">
-							<figure class="pad_bot1"><img src="images/page3_img4.jpg" alt=""></figure>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-						</div></div>
-					</div>
-					<div class="col-2-3">
-						<h2 style="padding-left: 10px;">Our Wine List</h2>
-						<div class="col-1-2"><div class="wrap-col">
+					<div class="col-full">
+						<div class="col-1-3"><div class="wrap-col">
 							<ul class="price">
+								<div>Rice</div>
+								<li><a href="#">Chiken Fried Ric</a><span>$15</span></li>
+								<li><a href="#">Vegitable Fried Rice</a><span>$23</span></li>
+								<li><a href="#">Indian Buriani</a><span>$57</span></li>
+								<li><a href="#">Malay Rice</a><span>$47</span></li>
+								<li><a href="#">Chiken Fried Ric</a><span>$15</span></li>
+								<li><a href="#">Vegitable Fried Rice</a><span>$23</span></li>
+								<li><a href="#">Indian Buriani</a><span>$57</span></li>
+								<li><a href="#">Malay Rice</a><span>$47</span></li>
+								<li><a href="#">Chiken Fried Ric</a><span>$15</span></li>
+								<li><a href="#">Vegitable Fried Rice</a><span>$23</span></li>
+								<li><a href="#">Indian Buriani</a><span>$57</span></li>
+								<li><a href="#">Malay Rice</a><span>$47</span></li>
+							</ul>
+						</div></div>
+						
+						<div class="col-1-3"><div class="wrap-col">
+							<ul class="price">
+								<div>Bread</div>
 								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
 								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
 								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
@@ -117,17 +127,75 @@
 								<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
 							</ul>
 						</div></div>
-						<div class="col-1-2"><div class="wrap-col">
-							<ul class="price">
-								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-								<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
-								<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
-								<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
-								<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
-							</ul>
+
+						<div class="col-1-3"><div class="wrap-col">
+								<ul class="price">
+									<div>Chapathi</div>
+									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
+									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
+									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
+									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
+									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
+								</ul>
+						</div></div>
+
+						<div class="col-1-3"><div class="wrap-col">
+								<ul class="price">
+									<div>Nann</div>
+									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
+									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
+									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
+									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
+									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
+								</ul>
+						</div></div>
+	
+						<div class="col-1-3"><div class="wrap-col">
+								<ul class="price">
+									<div>Chicken</div>
+									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
+									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
+									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
+									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
+									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
+								</ul>
+						</div></div>
+
+						<div class="col-1-3"><div class="wrap-col">
+								<ul class="price">
+									<div>Beef</div>
+									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
+									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
+									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
+									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
+									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
+								</ul>
+						</div></div>
+
+						<div class="col-1-3"><div class="wrap-col">
+								<ul class="price">
+									<div>Lentil</div>
+									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
+									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
+									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
+									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
+									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
+								</ul>
 						</div></div>
 					</div>
 				</div>
