--- a/zDeliccio/Wine.html
+++ b/zDeliccio/Wine.html
@@ -98,104 +98,99 @@
 					<div class="col-full">
 						<div class="col-1-3"><div class="wrap-col">
 							<ul class="price">
-								<div>Rice</div>
-								<li><a href="#">Chiken Fried Ric</a><span>$15</span></li>
-								<li><a href="#">Vegitable Fried Rice</a><span>$23</span></li>
-								<li><a href="#">Indian Buriani</a><span>$57</span></li>
-								<li><a href="#">Malay Rice</a><span>$47</span></li>
-								<li><a href="#">Chiken Fried Ric</a><span>$15</span></li>
-								<li><a href="#">Vegitable Fried Rice</a><span>$23</span></li>
-								<li><a href="#">Indian Buriani</a><span>$57</span></li>
-								<li><a href="#">Malay Rice</a><span>$47</span></li>
-								<li><a href="#">Chiken Fried Ric</a><span>$15</span></li>
-								<li><a href="#">Vegitable Fried Rice</a><span>$23</span></li>
-								<li><a href="#">Indian Buriani</a><span>$57</span></li>
-								<li><a href="#">Malay Rice</a><span>$47</span></li>
+								<div>KOTHU</div>
+								<div>Kothu Parotta</div>
+								<li><a href="#">Chiken</a><span>$10</span></li>
+								<li><a href="#">Lamb</a><span>$10</span></li>
+								<li><a href="#">Beef</a><span>$10</span></li>
+								<li><a href="#">Vegitarian</a><span>$10</span></li>
+								<li><a href="#">Mixed Chiken and Lamb</a><span>$10</span></li>
+								<div>String Hopper Kothu</div>
+								<li><a href="#">Chiken</a><span>$10</span></li>
+								<li><a href="#">Lamb</a><span>$10</span></li>
+								<li><a href="#">Beef</a><span>$10</span></li>
+								<li><a href="#">Vegitarian</a><span>$10</span></li>
+								<div>Pittu Kothu</div>
+								<li><a href="#">Chiken</a><span>$10</span></li>
+								<li><a href="#">Lamb</a><span>$10</span></li>
+								<li><a href="#">Beef</a><span>$10</span></li>
+								<li><a href="#">Vegitarian</a><span>$10</span></li>
+								<div>Dosa Kothu</div>
+								<li><a href="#">Chiken</a><span>$10</span></li>
+								<li><a href="#">Lamb</a><span>$10</span></li>
+								<li><a href="#">Beef</a><span>$10</span></li>
+								<li><a href="#">Vegitarian</a><span>$10</span></li>
+								<div>Pan Kothu</div>
+								<li><a href="#">Chiken</a><span>$10</span></li>
+								<li><a href="#">Lamb</a><span>$10</span></li>
+								<li><a href="#">Beef</a><span>$10</span></li>
+								<li><a href="#">Vegitarian</a><span>$10</span></li>
 							</ul>
 						</div></div>
 						
 						<div class="col-1-3"><div class="wrap-col">
 							<ul class="price">
-								<div>Bread</div>
-								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-								<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
-								<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
-								<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
-								<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
+							<div>Hoppers</div>
+								<li><a href="#">Plain Hoppers * 5</a><span>$7.50</span></li>
+								<li><a href="#">Plain Hoppers * 10</a><span>$12.50</span></li>
+								<li><a href="#">Egg Hopper</a><span>$2.50</span></li>
+								<li><a href="#">Milk Hopper</a><span>$2.50</span></li>
+								<div>Rice and Curry</div>
+								<li><a href="#">Fried Rice ( Prawn & Chicken)</a><span>$12.50</span></li>
+								<div>Devil Curry</div>
+								<li><a href="#">Chicken</a><span>$12.50</span></li>
+								<li><a href="#">Fish</a><span>$12.50</span></li>
+								<li><a href="#">Prawns</a><span>$12.50</span></li>
 							</ul>
 						</div></div>
 
 						<div class="col-1-3"><div class="wrap-col">
-								<ul class="price">
-									<div>Chapathi</div>
-									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
-									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
-									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
-									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
-								</ul>
+							<ul class="price">
+							<div>Chapathi</div>
+								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
+							</ul>
 						</div></div>
 
 						<div class="col-1-3"><div class="wrap-col">
-								<ul class="price">
-									<div>Nann</div>
-									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
-									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
-									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
-									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
-								</ul>
+							<ul class="price">
+							<div>Nann</div>
+								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
+							</ul>
 						</div></div>
 	
 						<div class="col-1-3"><div class="wrap-col">
-								<ul class="price">
-									<div>Chicken</div>
-									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
-									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
-									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
-									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
-								</ul>
+							<ul class="price">
+							<div>Chicken</div>
+								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
+							</ul>
 						</div></div>
 
 						<div class="col-1-3"><div class="wrap-col">
-								<ul class="price">
-									<div>Beef</div>
-									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
-									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
-									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
-									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
-								</ul>
+							<ul class="price">
+							<div>Beef</div>
+								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
+							</ul>
 						</div></div>
 
 						<div class="col-1-3"><div class="wrap-col">
-								<ul class="price">
-									<div>Lentil</div>
-									<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-									<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-									<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-									<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-									<li><a href="#">Totam rem aperiam</a><span>$87</span></li>
-									<li><a href="#">Eaque ipsa quae ab illo</a><span>$12</span></li>
-									<li><a href="#">Inventore veritatis et quasi</a><span>$33</span></li>
-									<li><a href="#">Architecto beatae vitae</a><span>$78</span></li>
-								</ul>
+							<ul class="price">
+							<div>Lentil</div>
+								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
+								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
+								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
+							</ul>
 						</div></div>
 					</div>
 				</div>
