--- a/zDeliccio/Wine.html
+++ b/zDeliccio/Wine.html
@@ -33,7 +33,9 @@
 		<div class="main zerogrid">
 <!-- header -->
 			<header>
-				<h1><a href="index.html" id="logo"><img src="images/logo.png"/></a></h1>
+				<h1><a href="index.html" id="logo">
+					<img class="zerogridimg" src="images/logo.png"/>
+				</a></h1>
 				<nav>
 					<ul id="top_nav">
 						<li><a href="index.html"><img src="images/icon_1.gif" alt=""></a></li>
@@ -45,7 +47,7 @@
 					<ul id="menu">
 						<li><a href="index.html">Restaurant</a></li>
 						<li><a href="Cuisine.html">Cuisine</a></li>
-						<li class="active"><a href="Wine.html">Wine List</a></li>
+						<li class="active"><a href="Wine.html">Menu</a></li>
 						<li><a href="CookBook.html">CookBook</a></li>
 						<li><a href="Contacts.html">Contacts</a></li>
 					</ul>
