--- a/zDeliccio/index.html
+++ b/zDeliccio/index.html
@@ -64,7 +64,7 @@
 						<ul id="menu">
 							<li class="active"><a href="index.html">Restaurant</a></li>
 							<li><a href="Cuisine.html">Cuisine</a></li>
-							<li><a href="Wine.html">Wine List</a></li>
+							<li><a href="Wine.html">Menu</a></li>
 							<li><a href="CookBook.html">CookBook</a></li>
 							<li><a href="Contacts.html">Contacts</a></li>
 						</ul>
