--- a/zDeliccio/Contacts.html
+++ b/zDeliccio/Contacts.html
@@ -46,7 +46,7 @@
 					<ul id="menu">
 						<li><a href="index.html">Restaurant</a></li>
 						<li><a href="Cuisine.html">Cuisine</a></li>
-						<li><a href="Wine.html">Wine List</a></li>
+						<li><a href="Wine.html">Menu</a></li>
 						<li><a href="CookBook.html">CookBook</a></li>
 						<li class="active"><a href="Contacts.html">Contacts</a></li>
 					</ul>
