--- a/zDeliccio/Cuisine.html
+++ b/zDeliccio/Cuisine.html
@@ -45,7 +45,7 @@
 					<ul id="menu">
 						<li><a href="index.html">Restaurant</a></li>
 						<li class="active"><a href="Cuisine.html">Cuisine</a></li>
-						<li><a href="Wine.html">Wine List</a></li>
+						<li><a href="Wine.html">Menu</a></li>
 						<li><a href="CookBook.html">CookBook</a></li>
 						<li><a href="Contacts.html">Contacts</a></li>
 					</ul>
