Change to suit Hop n Chop

--- a/zDeliccio/Cuisine.html
+++ b/zDeliccio/Cuisine.html
@@ -60,7 +60,7 @@
 							<div>
 								<h2>Did You <span>Know</span></h2>
 								<figure><img src="images/page2_img1.jpg" alt="" ></figure>
-								<p class="pad_bot1">Neque porro quisquam est, qui dolor- em ipsum qudolor sitamet consectetur adipisci velit, sed quia non numquam eius modi tempora incidunt.</p>
+								<p class="pad_bot1">Did you know that we use best Sri Lankan spices in our cooking and we have the most experienced Sri Lankan chefs in Melbourne.</p>
 								<a href="#" class="button1">Read More</a>
 							</div>
 						</div>
@@ -68,17 +68,17 @@
 					<section class="col-1-3"><div class="wrap-col">
 						<div class="box">
 							<div>
-								<h2 class="letter_spacing">Types<span> of Cuisine</span></h2>
+								<h2 class="letter_spacing">Our<span> Dishes</span></h2>
 								<ul class="list1 pad_bot1">
-									<li><a href="#">Lorem ipsum dolor sit amet</a></li>
-									<li><a href="#">Consectetur adipisicing elit sed</a></li>
-									<li><a href="#">Eiusmod tempor incididunt labore</a></li>
-									<li><a href="#">Ut enim ad minim veniam</a></li>
-									<li><a href="#">Quis nostrud exercation ullamco </a></li>
-									<li><a href="#">Laboris nisi ut aliquip</a></li>
-									<li><a href="#">Commodo consequat aute </a></li>
-									<li><a href="#">Irure dolor in reprehenderit</a></li>
-									<li><a href="#">Voluptate velit esse cillum dolore</a></li>
+									<li><a href="#">String Hopper Kothu</a></li>
+									<li><a href="#">Kothu Parotta</a></li>
+									<li><a href="#">Pittu Kothu</a></li>
+									<li><a href="#">Dosa Kothu</a></li>
+									<li><a href="#">Hoppers </a></li>
+									<li><a href="#">Devil Curry</a></li>
+									<li><a href="#">Jafna Crab Curry </a></li>
+									<li><a href="#">Pittu</a></li>
+									<li><a href="#">String Hopper</a></li>
 								</ul>
 								<a href="#" class="button1">Proposal for You</a>
 							</div>
@@ -89,7 +89,8 @@
 							<div>
 								<h2>Dish <span>of the Day</span></h2>
 								<figure><img src="images/page2_img2.jpg" alt="" ></figure>
-								<p class="pad_bot1">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos.</p>
+								<p class="pad_bot1">Hopper Meal , Plain Hoppers + Katta Sambol + SmallChicken Curry</p>
+								<br><br>
 								<a href="#" class="button1">Read More</a>
 							</div>
 						</div>
@@ -99,7 +100,7 @@
 		</div>
 	</div>
 </div>
-<div class="body2">
+<!--<div class="body2">
 	<div class="main zerogrid">
 		<article id="content2">
 			<div class="wrapper">
@@ -128,10 +129,10 @@
 					</div>
 				</section>
 			</div>
-		</article>
+		</article> -->
 <!-- / content -->
-	</div>
-</div>
+<!--	</div>
+</div> -->
 <div class="body3">
 
 		<div class="main zerogrid">
