--- a/zDeliccio/Wine.html
+++ b/zDeliccio/Wine.html
@@ -60,9 +60,9 @@
 					<section class="col-1-3"><div class="wrap-col">
 						<div class="box">
 							<div>
-								<h2 class="letter_spacing">Wine <span>Accessories</span></h2>
+								<h2 class="letter_spacing">Sri Lankan <span>Kothu</span></h2>
 								<figure><img src="images/page3_img1.jpg" alt="" ></figure>
-								<p class="pad_bot1">Neque porro quisquam est, qui dolor- em ipsum qudolor sitamet consectetur adipisci velit, sed quia non numquam eius modi tempora incidunt.</p>
+								<p class="pad_bot1">Kottu, also known as Koththu Rotti or Kothu Roti (Sinhala: කොත්තුරොටි; Tamil: கொத்துரொட்டி; meaning chopped bread), is a Sri Lankan dish made from godhamba roti (a type of Sri Lankan roti) and vegetables, egg and/or meat, and spices. At hop n chop  you will find a kothu with the authentic Sri Lankan taste.</p>
 								<a href="#" class="button1">Read More</a>
 							</div>
 						</div>
@@ -70,9 +70,9 @@
 					<section class="col-1-3"><div class="wrap-col">
 						<div class="box">
 							<div>
-								<h2>Wine <span>Pairing</span></h2>
+								<h2>Our <span>Hoppers</span></h2>
 								<figure><img src="images/page3_img2.jpg" alt="" ></figure>
-								<p class="pad_bot1">Ut enim ad minima veniam, quis nos- trum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+								<p class="pad_bot1">Hopper is a type of pancake made with fermented rice batter and coconut milk. It is a common food in Kerala, Tamil Nadu and Sri Lanka. It is eaten most frequently for breakfast or dinner. We serve crispy hoppers every day.</p>
 								<a href="#" class="button1">Proposal for You</a>
 							</div>
 						</div>
@@ -80,9 +80,10 @@
 					<section class="col-1-3"><div class="wrap-col">
 						<div class="box">
 							<div>
-								<h2>Exclusive <span>Wines</span></h2>
+								<h2>Our <span>Curries</span></h2>
 								<figure><img src="images/page3_img3.jpg" alt="" ></figure>
-								<p class="pad_bot1">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos.</p>
+								<p class="pad_bot1">A perfect balance of flavors and an aroma that brings good ol' memories rolling in. Contains nothing artificial.
+								</p>
 								<a href="#" class="button1">Read More</a>
 							</div>
 						</div>
@@ -98,7 +99,7 @@
 			<section>
 				<div class="wrapper">
 					<div class="col-full">
-						<div class="col-1-3"><div class="wrap-col">
+						<div class="col-1-2"><div class="wrap-col">
 							<ul class="price">
 								<div>KOTHU</div>
 								<div>Kothu Parotta</div>
@@ -130,7 +131,7 @@
 							</ul>
 						</div></div>
 						
-						<div class="col-1-3"><div class="wrap-col">
+						<div class="col-1-2"><div class="wrap-col">
 							<ul class="price">
 							<div>Hoppers</div>
 								<li><a href="#">Plain Hoppers * 5</a><span>$7.50</span></li>
@@ -142,58 +143,24 @@
 								<div>Devil Curry</div>
 								<li><a href="#">Chicken</a><span>$12.50</span></li>
 								<li><a href="#">Fish</a><span>$12.50</span></li>
-								<li><a href="#">Prawns</a><span>$12.50</span></li>
+								<li><a href="#">Prawns</a><span>$15.00</span></li>
+								<div>Jafna Crab Curry</div>
+								<li><a href="#">1 Crab</a><span>$10.00</span></li>
+								<li><a href="#">Pittu Pack</a><span>$5.00</span></li>
+								<li><a href="#">String Hopper Pack</a><span>$5.00</span></li>
+								<div>DEALS</div>
+								<div>Wokers Choice</div>
+								<li><a href="#">String Hoppers + Chicken Curry + Pol Sambol</a><span>$10.00</span></li>
+								<div>Hopper Meal</div>
+								<li><a href="#">Plain Hoppers + Katta Sambol + SmallChicken Curry</a><span>$10.00</span></li>
+								<div>PAAN PAAN</div>
+								<div>Jumbo Curry Burger</div>
+								<li><a href="#">Lettuce , Tomato , Saesoning with Chicken , Beef or Lamb + Soft Drink</a><span>$9.50</span></li>
+								<div>Loaded Loaf</div>
+								<li><a href="#">1/2 Loaf of bread stuffed with your choice of Lamb/Beef/Chicken + Dhal + Soft drink/a><span>$7.50</span></li>
 							</ul>
 						</div></div>
 
-						<div class="col-1-3"><div class="wrap-col">
-							<ul class="price">
-							<div>Chapathi</div>
-								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-							</ul>
-						</div></div>
-
-						<div class="col-1-3"><div class="wrap-col">
-							<ul class="price">
-							<div>Nann</div>
-								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-							</ul>
-						</div></div>
-	
-						<div class="col-1-3"><div class="wrap-col">
-							<ul class="price">
-							<div>Chicken</div>
-								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-							</ul>
-						</div></div>
-
-						<div class="col-1-3"><div class="wrap-col">
-							<ul class="price">
-							<div>Beef</div>
-								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-								<li><a href="#">Doloremque laudantium</a><span>$47</span></li>
-							</ul>
-						</div></div>
-
-						<div class="col-1-3"><div class="wrap-col">
-							<ul class="price">
-							<div>Lentil</div>
-								<li><a href="#">Sed ut perspiciatis unde</a><span>$15</span></li>
-								<li><a href="#">Omnis iste natus error</a><span>$23</span></li>
-								<li><a href="#">Sit voluptatem accusantium</a><span>$57</span></li>
-							</ul>
-						</div></div>
 					</div>
 				</div>
 			</section>
