--- a/zDeliccio/index.html
+++ b/zDeliccio/index.html
@@ -79,33 +79,33 @@
 								<li>
 									<img src="images/img1.jpg" alt="">
 									<div class="banner">
-										<strong>Italian<span>Fettuccine</span></strong>
+										<strong>Sri Lankan Style <span>Fried Rice</span></strong>
 										<b>Dish of the Day</b>
 										<p>
-											<span>Lorem ipsum dolamet consectetur<br>
-											adipisicing elit, sed do eiusmod tempor aliqua enim ad minim veniam, quis nosinci- didunt ut labore et dolore.</span>
+											<span>Best Sri Lankan Style Fried Rice<br>
+											Nothing can beat our fried rice.</span>
 										</p>
 									</div>
 								</li>
 								<li>
 									<img src="images/img2.jpg" alt="">
 									<div class="banner">
-										<strong>succulent<span>meat</span></strong>
+										<strong>Crispy<span>Hoppers</span></strong>
 										<b>Dish of the Day</b>
 										<p>
-											<span>Lorem ipsum dolamet consectetur <br>
-											adipisicing elit, sed do eiusmod tempor aliqua enim ad minim veniam, quis nosinci- didunt ut labore et dolore.</span>
+											<span>Enjoy crispy Hoppers <br>
+											Egg Hoppers , Plain Hoppers , Milk Hoppers .......</span>
 										</p>
 									</div>
 								</li>
 								<li>
 									<img src="images/img3.jpg" alt="">
 									<div class="banner">
-										<strong>French-Style<span>Tartlet</span></strong>
+										<strong>Our<span>Kothu</span></strong>
 										<b>Dish of the Day</b>
 										<p>
-											<span>Lorem ipsum dolamet consectetur <br>
-											adipisicing elit, sed do eiusmod tempor aliqua enim ad minim veniam, quis nosinci- didunt ut labore et dolore.</span>
+											<span>Best Kothu in Melbourne <br>
+											Come taste our Sri Lankan Style Kothus.</span>
 										</p>
 									</div>
 								</li>
@@ -121,7 +121,7 @@
 							</div>
 	                    </div>
 					</div>
-					<div class="wrap">
+					<!--<div class="wrap">
 						<section class="col-1-3"><div class="wrap-col">
 							<div class="box">
 								<div>
@@ -157,7 +157,7 @@
 								</div>
 							</div>
 						</div></section>
-					</div>
+					</div> -->
 				</article>
 			</div>
 		</div>
@@ -165,7 +165,7 @@
 </div>
 <div class="body2">
 	<div class="main zerogrid">
-		<article id="content2">
+		<!--<article id="content2">
 			<div class="wrapper">
 				<section class="col-2-3">
 					<h2>Upcoming Events</h2>
@@ -231,7 +231,7 @@
 					</ul>
 				</div></section>
 			</div>
-		</article>
+		</article> -->
 <!-- / content -->
 	</div>
 </div>
