--- a/zDeliccio/Contacts.html
+++ b/zDeliccio/Contacts.html
@@ -97,21 +97,20 @@
 					<div class="col-1-3"><div class="wrap-col">
 						<h2>Our Contacts</h2>
 						<div class="wrapper pad_bot1">
-							<p>Sed ut perspiciatis unde omnis iunatus doloremque laudantium.</p>
+							<p>Following are our contact details.</p>
 							<p class="address">
-								Marmora Road, Glasgow, D04 89GR.<br>
-								<span>Freephone:</span>    +1 800 559 6580<br>
-								<span>Telephone:</span>    +1 959 603 6035<br>
-								<span>E-mail:</span>             <a href="mailto:">mail@demolink.org</a>
+								61 Coulstock St, Epping VIC 3076 <br>
+								<span>Telephone:</span>    (03) 9408 3785<br>
+								<span>E-mail:</span>             <a href="mailto:">mail@hopnchop.com.au</a>
 							</p>
 						</div>
 					</div></div>
 					<div class="col-2-3"><div class="wrap-col mag-1">	
 						<h2>Miscellaneous Info</h2>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+							We are currently located in Epping. Please visit our restaurant to try out some of our great Sri Lankan street food. Yes we do catering. Please contact us for your next catering.
 						</p>
-						Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error.
+						
 					</div></div>
 				</div>
 			</section>
