--- a/zDeliccio/CookBook.html
+++ b/zDeliccio/CookBook.html
@@ -60,16 +60,12 @@
 							<div>
 								<h2>Recent <span>Recipes</span></h2>
 								<ul class="list1 pad_bot1">
-									<li><a href="#">Lorem ipsum dolor sit amet</a></li>
-									<li><a href="#">Consectetur adipisicing elit sed</a></li>
-									<li><a href="#">Eiusmod tempor incididunt labore</a></li>
-									<li><a href="#">Ut enim ad minim veniam</a></li>
-									<li><a href="#">Quis nostrud exercation ullamco </a></li>
-									<li><a href="#">Laboris nisi ut aliquip</a></li>
-									<li><a href="#">Commodo consequat aute </a></li>
-									<li><a href="#">Irure dolor in reprehenderit</a></li>
-									<li><a href="#">Voluptate velit esse cillum dolore</a></li>
+									<li><a href="#">Jafna Crab Curry</a></li>
+									<li><a href="#">Pittu Kothu</a></li>
+									<li><a href="#">Devil Lamb Curry</a></li>
+									<li><a href="#">Loaded Loaf</a></li>
 								</ul>
+								<br><br><br><br>
 								<a href="#" class="button1">Read More</a>
 							</div>
 						</div>
@@ -79,7 +75,7 @@
 							<div>
 								<h2>Your <span>Benefit</span></h2>
 								<figure><img src="images/page4_img1.jpg" alt="" ></figure>
-								<p class="pad_bot1">Ut enim ad minima veniam, quis nos- trum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+								<p class="pad_bot1">Our Dishes are made by the experienced chefs using finest ingredients.</p>
 								<a href="#" class="button1">Read More</a>
 							</div>
 						</div>
@@ -87,15 +83,13 @@
 					<section class="col-1-3"><div class="wrap-col">
 						<div class="box">
 							<div>
-								<h2 class="pad_bot1">Our <span>Standards</span></h2>
-								<p class="pad_bot1">
-									<strong>1. At vero eos et accusamus</strong><br>
-									Iusto odio dignissimos ducimus qui blanditiis praesentium.<br>
-									<strong>2. Voluptatum deleniti atque</strong><br>
-									Corrupti quos dolores et quas molestias excepturi sint occaecati.<br>
-									<strong>3. Cupiditate non provident</strong><br>
-									Similique suculpa qui officia deserunt mollitia animi, id est.
-								</p>
+								<h2>Our <span>Standards</span></h2>
+								<ul class="list1 pad_bot1">
+									<li><a href="#">Experienced Sri Lankan Chefs</a></li>
+									<li><a href="#">Authentic Street Food Menu</a></li>
+									<li><a href="#">We use Quality Ingredients</a></li>
+								</ul>
+								<br><br><br><br><br>
 								<a href="#" class="button1">Read More</a>
 							</div>
 						</div>
