--- a/zDeliccio/Wine.html
+++ b/zDeliccio/Wine.html
@@ -73,6 +73,7 @@
 								<h2>Our <span>Hoppers</span></h2>
 								<figure><img src="images/page3_img2.jpg" alt="" ></figure>
 								<p class="pad_bot1">Hopper is a type of pancake made with fermented rice batter and coconut milk. It is a common food in Kerala, Tamil Nadu and Sri Lanka. It is eaten most frequently for breakfast or dinner. We serve crispy hoppers every day.</p>
+								<br>
 								<a href="#" class="button1">Proposal for You</a>
 							</div>
 						</div>
@@ -84,6 +85,7 @@
 								<figure><img src="images/page3_img3.jpg" alt="" ></figure>
 								<p class="pad_bot1">A perfect balance of flavors and an aroma that brings good ol' memories rolling in. Contains nothing artificial.
 								</p>
+								<br><br><br><br>
 								<a href="#" class="button1">Read More</a>
 							</div>
 						</div>
@@ -157,7 +159,7 @@
 								<div>Jumbo Curry Burger</div>
 								<li><a href="#">Lettuce , Tomato , Saesoning with Chicken , Beef or Lamb + Soft Drink</a><span>$9.50</span></li>
 								<div>Loaded Loaf</div>
-								<li><a href="#">1/2 Loaf of bread stuffed with your choice of Lamb/Beef/Chicken + Dhal + Soft drink/a><span>$7.50</span></li>
+								<li><a href="#">1/2 Loaf of bread stuffed with your choice of Lamb/Beef/Chicken + Dhal + Soft drink</a><span>$7.50</span></li>
 							</ul>
 						</div></div>
 
