--- a/zDeliccio/Wine.html
+++ b/zDeliccio/Wine.html
@@ -34,7 +34,8 @@
 <!-- header -->
 			<header>
 				<h1><a href="index.html" id="logo">
-					<img class="zerogridimg" src="images/logo.png"/>
+					<!-- <img class="zerogridimg" src="images/logo.png"/> -->
+					<img src="images/logo.png"/>
 				</a></h1>
 				<nav>
 					<ul id="top_nav">
